--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
             width: 850px;
             margin: 40px auto;
             display: flex;
-            background: #fff;
+            align-items:center;
+            background: #2c3e50;
             border-radius: 8px;
             box-shadow: 0 4px 10px rgba(0,0,0,0.2);
         }
@@ -36,6 +37,7 @@
         }
 
         .right {
+            background: white;
             width: 60%;
             padding: 30px;
         }
